# EVAS

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  evas-capabilities.manifest  evas.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs_en/: cli.md  conf.py  index.rst  installation.md  quickstart.md
docs_en/_static/: custom.css
docs_en/_templates/: layout.html  (+1 more)
docs_zh/: conf.py
evas/: __init__.py  __main__.py  cli.py
prototypes/: audit_089_real_bench.py  audit_091d_wall_bench.py  audit_092_real_bench.py  audit_093_sweep.py  audit_093_sweep_results.json  audit_094l_pipeline_stage_roundtrip.py  audit_094p_pipeline_stage_shadow_sweep.py  audit_094q_pipeline_stage_fullsim_wrapper.py  audit_094s_pipeline_stage_bound_array_slice.py  audit_096_sweep_results.json  audit_096_transition_production_sweep.py  audit_098_current_rust_coverage.py  cmp_delay_profile.py
tests/: test_audit_088_transition_batch.py  test_audit_089_cross_above_production.py  test_audit_091b_generic_candidate.py  test_audit_091c_generic_dispatch.py  test_audit_091d_generic_executor.py  test_audit_094a_expr_ir.py  test_audit_094b_stmt_schedule_ir.py  test_audit_094d_state_binding_ir.py  test_audit_094f_body_ir_encoder.py  test_audit_094h_event_due_program.py  test_audit_094n_transition_runtime.py  test_audit_094o_analog_block_runtime.py  test_backend_migration_capability_manifest.py  test_cli.py  test_compiler.py  test_engine.py  test_examples.py  test_examples_rust_parity.py  test_indexed_backend.py  test_netlist.py  test_rust_backend.py
wiki/: rust-kernel-design.md
(+129 files in other folders)
